Add calculator-ui in html with basic css styling
Added calculator-ui content in index.html with dummy content
to test styles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="javascript.js" defer></script>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Calculator</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="javascript.js" defer></script>
+    </head>
+    <body>
+        <div class="calculator-container">
+            <div class="display-container">
+                <div class="display-prev-text">120+</div>
+                <div class="display-main-text">43</div>
+            </div>
+            <div class="buttons-container">
+                <div class="button clear-button">CLEAR</div>
+                <div class="button delete-button">DELETE</div>
+                <div class="button number-button">7</div>
+                <div class="button number-button">8</div>
+                <div class="button number-button">9</div>
+                <div class="button operation-button divide-button">÷</div>
+                <div class="button number-button">4</div>
+                <div class="button number-button">5</div>
+                <div class="button number-button">6</div>
+                <div class="button operation-button mul-button">×</div>
+                <div class="button number-button">1</div>
+                <div class="button number-button">2</div>
+                <div class="button number-button">3</div>
+                <div class="button operation-button diff-button">-</div>
+                <div class="button number-button">.</div>
+                <div class="button number-button">0</div>
+                <div class="button equals-button">=</div>
+                <div class="button operation-button add-button">+</div>
+            </div>
+        </div>
+        <div class="footer">
+            <a href="https://github.com/samarpanrana95">@ranasamarpan95_2025</a>
+        </div>
+    </body>
 </html>
