Add basic get initalNumber input and get operation input features

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div class="calculator-container">
             <div class="display-container">
-                <div class="display-prev-text">120+</div>
-                <div class="display-main-text">43</div>
+                <div class="display-prev-text">0</div>
+                <div class="display-main-text">0</div>
             </div>
             <div class="buttons-container">
                 <div class="button clear-button">CLEAR</div>
